snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.jar.sha256
31c9e910179fc9d0de2b23c3a95a0a18dbeb0bf123ff119a47e828ad685abd91